python/testData/inspections/PyUnresolvedReferencesInspection/OneUnsedOneMarked/a.py
from library import foo,<error descr="Cannot find reference 'bar' in 'library'">bar</error>


print(foo)